--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require": {
-        "silex/silex": "1.*"
+        "silex/silex": "1.*",
+        "twitter\/bootstrap": "v3.0.0",
+        "symfony/twig-bridge": "~2.3"
     },
     "autoload": {
         "psr-0": {
