--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
     ],
     "require": {
         "silex/silex": "1.*",
-        "twitter\/bootstrap": "v3.0.0",
-        "symfony/twig-bridge": "~2.3"
+        "twitter\/bootstrap"  : "v3.0.0",
+        "symfony/twig-bridge" : "~2.3",
+        "symfony/form"        : "~2.3",
+        "symfony/validator"   : "~2.3",
+        "symfony/config"      : "~2.3",
+        "symfony/translation" : "~2.3"
     },
     "autoload": {
         "psr-0": {
