--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -1,6 +1,6 @@
 <?php
 $config = new Letterpress\Config();
 
-$config->addPaper(new \Letterpress\PaperSheet('Superpapier 2000', 700, 1000, \Letterpress\PaperSheet::LONG_GRAIN, 0.5));
-$config->addPaper(new \Letterpress\PaperSheet('Superpapier 3000', 700, 800, \Letterpress\PaperSheet::LONG_GRAIN,  0.5));
-$config->addPaper(new \Letterpress\PaperSheet('Bonner Bogen', 600, 220, \Letterpress\PaperSheet::SHORT_GRAIN, 0.75));
+$config->addPaper(new \Letterpress\PaperSheet('Superpapier 2000 (Schmalbahn)', 700, 1000, \Letterpress\PaperSheet::LONG_GRAIN, 0.5));
+$config->addPaper(new \Letterpress\PaperSheet('Superpapier 3000 (Schmalbahn)', 700, 800, \Letterpress\PaperSheet::LONG_GRAIN,  0.5));
+$config->addPaper(new \Letterpress\PaperSheet('Bonner Bogen (Breitbahn)', 600, 220, \Letterpress\PaperSheet::SHORT_GRAIN, 0.75));
